--- a/css/styles.css
+++ b/css/styles.css
@@ -146,7 +146,6 @@ body {
 .hero-section {
   display: block;
   max-width: 1600px;
-  height: 600px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 200px;
@@ -339,6 +338,7 @@ body {
 
 .footer-wraper {
   display: flex;
+  align-items: baseline;
 }
 
 .footer-logo {
@@ -366,7 +366,6 @@ body {
 }
 
 .footer-social {
-  margin-top: 10px;
   margin-left: 70px;
 }
 
@@ -407,12 +406,6 @@ body {
   margin-left: 8px;
 }
 
-.portfolio-item:hover {
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-}
-
 .portfolio-btn {
   font-weight: 500;
   font-size: 16px;
@@ -429,6 +422,9 @@ body {
 .portfolio-btn.active {
   color: var(--color-title);
   background: var(--color-hover-focus);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 
 .portfolio-list {
@@ -441,14 +437,8 @@ body {
 }
 
 .portfolio-item-card {
-  width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
-}
-
-.portfolio-item-card:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio-item-card:nth-child(3n) {
@@ -460,9 +450,16 @@ body {
 }
 
 .potfolio-link {
-  text-decoration: none;
+  width: 370px;
+  display: block;
   color: var(--color);
+  text-decoration: none;
   cursor: pointer;
+}
+
+.potfolio-link:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .potfolio-img {
